@@ -1,5 +1,9 @@
 2010-11-06  Glenn Morris  <rgm@gnu.org>
 
+	* emulation/viper-cmd.el (viper-read-string-with-history):
+	Prefix dynamic local `initial'.
+	(viper-minibuffer-standard-hook): Update for above name change.
+
 	* emacs-lisp/elint.el (elint-init-env): Prefix dynamic local `env'.
 	(elint-init-form): Update for above name change.
 
